# Simple-Paint

./: README.md
SimplePaint/: .gitignore  CMakeLists.txt  Dockerfile  SimplePaint.pro  docker_run.sh
SimplePaint/headers/: brush.h  bucket.h  colorpicker.h  ellipse.h  eraser.h  image.h  line.h  mainwindow.h  pencil.h  rect.h  tool.h  triangle.h
SimplePaint/src/: brush.cpp  bucket.cpp  colorpicker.cpp  ellipse.cpp  eraser.cpp  image.cpp  line.cpp  main.cpp  mainwindow.cpp  pencil.cpp  rect.cpp  tool.cpp  triangle.cpp
